testsuite/tests/properties/invalid_matchers/invalid_type.lkt
import common

class ExampleNode: FooNode {
    @parse_field body: BodyNode

    fun prop(): Int = match node.body {
        case e: NullNode   => e.prop
        case e: Expression => e.prop
        case e: Bool       => e.prop
    }
}
